sentry/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sentry-onpremise
  namespace: sentry
  labels:
    app: sentry-onpremise
spec:
  replicas: 3
  template:
    metadata:
      labels:
       app: sentry-onpremise
    spec:
      containers:
      - name: memcached
        image: memcached:1.4
      - name: redis
        image: redis:3.2-alpine
      - name: smtp
        image: tianon/exim4
      - name: sentry-web
        image: gcr.io/eng-sandbox/sentry-onpremise:1.1
        args: ["run","web"]
        ports:
        - containerPort: 9000
      - name: sentry-worker
        image: gcr.io/eng-sandbox/sentry-onpremise:1.1
        args: ["run","worker"]
      - name: sentry-cron
        image: gcr.io/eng-sandbox/sentry-onpremise:1.1
        args: ["run", "cron"] 
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                "-instances=eng-sandbox:us-east4:sentry-dev=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
          - name: ssl-certs
            mountPath: /etc/ssl/certs
          - name: cloudsql
            mountPath: /cloudsql
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
      - name: cloudsql
        emptyDir:
      - name: ssl-certs
        hostPath:
          path: /etc/ssl/certs
