sentry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentry
  namespace: sentry
spec:
  type: NodePort
  ports:
  - port: 80 
    targetPort: 9000
    protocol: TCP
  selector:
    app: sentry
