sentry/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sentry
  namespace: sentry
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - sentry.eng-sandbox.cloverhealth.engineering 
    secretName: sentry-tls
  rules:
    - host: sentry.eng-sandbox.cloverhealth.engineering
      http:
        paths:
        - path: /
          backend:
            serviceName: sentry
            servicePort: 80
